Updated loader, fixed server side issues with visibility graph

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import "grid";
 @import "mixins";
 @import "table";
+@import "loader";
 
 html,body { height: 100%; margin: 0px; padding: 0px; background: $background-color}
 
@@ -13,6 +14,9 @@ input {
   height: 50px;
 }
 
+#container {
+	position: relative;
+}
 
 #details {
 	margin: 20px 0px;
